Working impl with structured concurrency